compiler-core/src/go/tests/snapshots/gleam_core__go__tests__tuples__tuple1.snap
---
source: compiler-core/src/go/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  #(
    "1111111111111111111111111111111",
    #("1111111111111111111111111111111", "2", "3"),
    "3",
  )
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Tuple3_t[
  gleam_P.String_t,
  gleam_P.Tuple3_t[gleam_P.String_t, gleam_P.String_t, gleam_P.String_t],
  gleam_P.String_t,
] {
  return gleam_P.Tuple3_t[
    gleam_P.String_t,
    gleam_P.Tuple3_t[gleam_P.String_t, gleam_P.String_t, gleam_P.String_t],
    gleam_P.String_t,
  ]{
    "1111111111111111111111111111111",
    gleam_P.Tuple3_t[gleam_P.String_t, gleam_P.String_t, gleam_P.String_t]{
      "1111111111111111111111111111111",
      "2",
      "3",
    },
    "3",
  }
}
