compiler-core/src/go/tests/snapshots/gleam_core__go__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src/go/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1\",\n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  #(
    "1",
    {
      "2"
      "3"
    },
  )
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Tuple2_t[gleam_P.String_t, gleam_P.String_t] {
  return gleam_P.Tuple2_t[gleam_P.String_t, gleam_P.String_t]{
    "1",
    (func() gleam_P.String_t {
      _ = "2"
      return "3"
    })(),
  }
}
